fixed upload not listing, download working notest
